# MYRABot

./: README.md
MB_robot/: CMakeLists.txt  MB.sh  stack.xml
MB_robot/find_object_2d/: CMakeLists.txt  mainpage.dox  manifest.xml  qrc_resources.cxx  ui_aboutDialog.h  ui_addObjectDialog.h  ui_mainWindow.h
MB_robot/find_object_2d/launch/: encontrar_objetos.launch  find_object_2d.launch
MB_robot/find_object_2d/msg/: PointObjects.msg
MB_robot/find_object_2d/msg_gen/cpp/include/find_object_2d/: PointObjects.h  Point_id.h
MB_robot/find_object_2d/msg_gen/lisp/: PointObjects.lisp  Point_id.lisp  _package.lisp  _package_PointObjects.lisp  _package_Point_id.lisp  find_object_2d-msg.asd
MB_robot/find_object_2d/src/: CameraROS.cpp  CameraROS.h  ObjectsDetectedCallback.h  find_object_2d_node.cpp  moc_CameraROS.cxx  moc_ObjectsDetectedCallback.cxx  objects_detected.cpp  print_objects_detected_node.cpp
MB_robot/find_object_2d/src/find_object_2d/msg/: _PointObjects.py  _Point_id.py  __init__.py
MB_robot/find_object_2d/src_x/: moc_AboutDialog.cxx  moc_AddObjectDialog.cxx  moc_Camera.cxx  moc_MainWindow.cxx  moc_ObjWidget.cxx  moc_ParametersToolBox.cxx
MB_robot/find_object_2d/src_x/resources/.svn/: all-wcprops  entries
MB_robot/find_object_2d/src_x/rtabmap/: moc_PdfPlot.cxx
MB_robot/find_object_2d/src_x/rtabmap/.svn/: all-wcprops  entries
MB_robot/find_object_2d/src_x/ui/.svn/: all-wcprops  entries
MB_robot/find_object_2d/src_x/utilite/: moc_UPlot.cxx
MB_robot/find_object_2d/src_x/utilite/.svn/: all-wcprops  entries
MB_robot/myrabot_arm_base/: CMakeLists.txt  mainpage.dox  manifest.xml
MB_robot/myrabot_arm_base/include/myrabot_arm_base/: myrabot_arm_base.h
MB_robot/myrabot_arm_base/launch/: control_v0.4.launch~  teleoperador_teclado.launch~  teleoperador_xbox.launch  teleoperador_xbox360.launch
MB_robot/myrabot_arm_base/msg_gen/cpp/include/myrabot_arm_base/: ReadServos.h  Servos.h  WriteServos.h
MB_robot/myrabot_arm_base/msg_gen/lisp/: ReadServos.lisp  Servos.lisp  WriteServos.lisp  _package.lisp  _package_ReadServos.lisp  _package_Servos.lisp  _package_WriteServos.lisp  myrabot_arm_base-msg.asd
MB_robot/myrabot_arm_base/src/: control_v0.4.cpp  joint_states_brazo.cpp  pick.cpp  place.cpp  teleoperador_teclado.cpp  teleoperador_xbox.cpp  teleoperador_xbox360.cpp
MB_robot/myrabot_arm_base/src/myrabot_arm_base/msg/: _ReadServos.py  _Servos.py  _WriteServos.py  __init__.py
MB_robot/myrabot_arm_model/: CMakeLists.txt  controller.yaml  mainpage.dox  manifest.xml
MB_robot/myrabot_arm_model/launch/: brazo_gazebo.launch  brazo_real_gazebo.launch  brazo_rviz.launch
MB_robot/myrabot_arm_model/urdf/: brazo-macros.xacro  brazo-macros_real.xacro  brazo.urdf.xacro  brazo.xacro  brazo_real.urdf.xacro  brazo_real.xacro
MB_robot/myrabot_bringup/: mainpage.dox  manifest.xml
MB_robot/myrabot_bringup/launch/: kinect.launch  myrabot.launch  roomba.launch
MB_robot/myrabot_gazebo_plugins/: CMakeLists.txt
MB_robot/myrabot_gazebo_plugins/src/: gazebo_ros_roomba.cpp  gazebo_ros_roomba.cpp_backup  gazebo_ros_sonar.cpp  gazebo_ros_sonar.cpp_backup
MB_robot/myrabot_navigation/: mainpage.dox  manifest.xml
MB_robot/myrabot_navigation/launch/: crear_mapa.launch  usar_mapa.launch
MB_robot/myrabot_robot_model/: CMakeLists.txt  mainpage.dox  manifest.xml
MB_robot/myrabot_robot_model/launch/: myrabot_brazo_real_gazebo.launch  myrabot_brazo_real_rviz.launch  myrabot_gazebo.launch  myrabot_gazebo.launch~  myrabot_rviz.launch
MB_robot/myrabot_robot_model/meshes/: e_base.stl  (+5 more)
MB_robot_hydro/: MB.sh
MB_robot_hydro/find_object_2d/: CMakeLists.txt  config.ini
MB_robot_hydro/myrabot_arm_base_b/: CMakeLists.txt  CMakeLists.txt~  package.xml
MB_robot_hydro/myrabot_arm_base_b/include/myrabot_arm_base_b/: myrabot_arm_base_b.h
MB_robot_hydro/myrabot_arm_base_b/launch/: control_v0.4.launch  controlador_moveit.launch  controlador_moveit.launch~  detecta_color.launch  interruptores.launch  interruptores_sim.launch  paper.launch  pick-place.launch  teleoperador_teclado.launch  teleoperador_xbox360.launch
MB_robot_hydro/myrabot_arm_base_b/msg/: WriteServosTrajectory.msg
MB_robot_hydro/myrabot_arm_base_b/params/: interruptor_4.yaml  interruptor_5.yaml  interruptor_7.yaml  interruptor_8.yaml  interruptor_9.yaml
MB_robot_hydro/myrabot_arm_base_b/params_panel_lab/: interruptor_3.yaml  interruptor_3.yaml~  interruptor_4.yaml  interruptor_4.yaml~
MB_robot_hydro/myrabot_arm_base_b/src/: control_v0.4.cpp  control_v0.4.cpp~  controlador_moveit.cpp  interruptores.cpp  joint_states_brazo.cpp  paper.cpp  pick.cpp  place.cpp  punto.cpp  teleoperador_teclado.cpp  teleoperador_teclado.cpp~  teleoperador_xbox.cpp  teleoperador_xbox360.cpp
MB_robot_hydro/myrabot_arm_model_b/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
MB_robot_hydro/myrabot_bringup_b/: CMakeLists.txt  package.xml
MB_robot_hydro/myrabot_dialog_b/: CMakeLists.txt  README.md  package.xml
MB_robot_hydro/myrabot_gazebo_plugins/: package.xml
MB_robot_hydro/myrabot_gazebo_plugins/include/myrabot_gazebo_plugins/: gazebo_ros_range.h
MB_robot_hydro/myrabot_gazebo_plugins/src/: gazebo_ros_range.cpp
MB_robot_hydro/myrabot_moveit_b/: .setup_assistant  CMakeLists.txt  package.xml
MB_robot_hydro/myrabot_navigation_b/: mainpage.dox  manifest.xml
MB_robot_hydro/myrabot_objects_models_b/: CMakeLists.txt  package.xml
MB_robot_hydro/myrabot_robot_model_b/: CMakeLists.txt  CMakeLists.txt~  package.xml
MB_robot_indigo/myrabot_arm_base/: CMakeLists.txt  package.xml
MB_robot_indigo/myrabot_arm_model/: CMakeLists.txt  package.xml
MB_robot_indigo/myrabot_bringup/: CMakeLists.txt  package.xml
MB_robot_indigo/myrabot_dialog/: CMakeLists.txt  package.xml
MB_robot_indigo/myrabot_gazebo_plugins/: CMakeLists.txt
MB_robot_indigo/myrabot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
MB_robot_indigo/myrabot_objects_models/: CMakeLists.txt  package.xml
MB_robot_indigo/myrabot_robot_model/: CMakeLists.txt  package.xml
arduino_program/brazo_pulsador_ultrasonidos/: brazo_pulsador_ultrasonidos.ino
(+302 files in other folders)
