<package>
  <name>myrabot_gazebo_plugins</name>
  <version>1.0.0</version>
  <description>
    Robot-independent Gazebo plugins  adapted from  PAL Robotics for MYRABot platform
  </description>

   <maintainer email="Fran@todo.es">Francisco Lera</maintainer>

  <license>BSD</license>

<!-- Source <url type="repository">https://github.com/pal-robotics/pal_gazebo_plugins</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>gazebo</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>

</package>

